# xvid

./: .gitignore  CMakeLists.txt  toolchain-mingw32.cmake  toolchain-mingw64.cmake
src/: XvidDecoder.c  XvidDecoder.def  XvidDecoder.h  XvidDecoder.ld  decoder.c  global.h  nasm.inc  xvid.h
src/bitstream/: bitstream.c  bitstream.h  mbcoding.c
src/dct/x86_asm/: fdct_sse2_skal.asm
src/image/: colorspace.c  image.c
src/motion/: gmc.c
src/quant/: quant_matrix.c
